--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Content tracker"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.16.1",
     "fastapi[standard]>=0.115.12",
     "mypy>=1.16.0",
 ]
